--- a/stationsetup.html
+++ b/stationsetup.html
@@ -86,8 +86,8 @@
             </tr>
 
             </table>
-							<button type="submit" data-inline='false'><i class='lIcon fa fa-check'></i>Submit</button>
-							<button type="reset" data-inline='false'><i class='lIcon fa fa-times'></i>Cancel</button>
+							<button type="button" data-inline='true'><i class='lIcon fa fa-check'></i>Submit</button>
+							<button type="reset" data-inline='true'><i class='lIcon fa fa-times'></i>Cancel</button>
 
 
             </form>
