--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
     </head>
-    <body>
+    <body >
 
     <div data-role="page" data-theme='b'>
 
@@ -49,7 +49,7 @@
 					<h2>&nbsp;</h2>
                     <li data-role="fieldcontain">
                         <label for="vin">&nbsp;&nbsp;VIN</label>
-                        <input type="text" name="vin" id="vin" value="" data-clear-btn="true" placeholder="Type or scan VIN here ...">
+                        <input type="text" name="vin" id="vin" value="" autofocus data-clear-btn="true" placeholder="Type or scan VIN here ...">
                     </li>
 
 					<h2>&nbsp;</h2>
