--- a/process.html
+++ b/process.html
@@ -24,6 +24,7 @@
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
 		<script type='application/javascript' src='js/fastclick.js'></script>
+		<script type='application/javascript' src='js/index.js'></script>
 
 
     </head>
