--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
 
 		</div>
 
+		<div data-position="fixed" data-tap-toggle="false" data-role="footer" data-tap-toggle="false" data-theme='b'>
+			<div data-role="navbar">
+				<ul>
+					<li><a href="stationsetup.html"><i class='blIcon fa fa-tablet'></i>Station Setup</a></li>
+					<li><a href="usersetup.html"><i class='blIcon fa fa-user'></i>User Setup</a></li>
+				</ul>
+			</div>
+		</div>
+
     </div>
 
     </body>
