--- a/process.html
+++ b/process.html
@@ -23,6 +23,8 @@
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
+		<script src="js/jquery.jsonp-2.4.0.min.js"></script>
+
 		<script type='application/javascript' src='js/fastclick.js'></script>
 		<script type='application/javascript' src='js/index.js'></script>
 
