--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
 
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme='b'>
-            <a href="index.html" data-ajax="false"><i class='fa fa-bars'></i></a>
             <h1>VPC Appearance Products</h1>
             <h5>Station 1</h5>
         </div>
@@ -69,6 +68,7 @@
 		<div data-position="fixed" data-tap-toggle="false" data-role="footer" data-tap-toggle="false" data-theme='b'>
 			<div data-role="navbar">
 				<ul>
+					<li><a href="index.html"><i class='blIcon fa fa-car'></i>Process Vehicle</a></li>
 					<li><a href="stationsetup.html"><i class='blIcon fa fa-tablet'></i>Station Setup</a></li>
 					<li><a href="usersetup.html"><i class='blIcon fa fa-user'></i>User Setup</a></li>
 				</ul>
@@ -81,7 +81,6 @@
 
 
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme='b'>
-            <a href="index.html" data-ajax="false"><i class='fa fa-bars'></i></a>
             <h1>VPC Appearance Products</h1>
             <h5>Station 1</h5>
         </div>
@@ -114,6 +113,7 @@
 		<div data-position="fixed" data-tap-toggle="false" data-role="footer" data-tap-toggle="false" data-theme='b'>
 			<div data-role="navbar">
 				<ul>
+					<li><a href="index.html"><i class='blIcon fa fa-car'></i>Process Vehicle</a></li>
 					<li><a href="stationsetup.html"><i class='blIcon fa fa-tablet'></i>Station Setup</a></li>
 					<li><a href="usersetup.html"><i class='blIcon fa fa-user'></i>User Setup</a></li>
 				</ul>
