--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<ul>
 					<li><a href="index.html"><i class='blIcon fa fa-car'></i>Process Vehicle</a></li>
 					<li><a href="stationsetup.html"><i class='blIcon fa fa-tablet'></i>Station Setup</a></li>
-					<li><a href="usersetup.html"><i class='blIcon fa fa-user'></i>User Setup</a></li>
+					<li><a href="workersetup.html"><i class='blIcon fa fa-user'></i>Worker Setup</a></li>
 				</ul>
 			</div>
 		</div>
