--- a/workersetup.html
+++ b/workersetup.html
@@ -37,7 +37,7 @@
 
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme='b'>
             <h1>VPC Appearance Products</h1>
-            <h3>Station Setup</h3>
+            <h3>Worker Setup</h3>
         </div>
 
         <div data-role="content" data-inset="true">
@@ -45,43 +45,39 @@
             <form>
             <table data-role='table' id='table-column-toggle' data-mode='none' class='ui-responsive table-stroke'>
             <tr>
-            <th>North Lane
+            <th>Worker 1
             </th>
-            <th>South Lane
+            <th>Worker 2
             </th>
             </tr>
             <tr>
             <td>
                         <fieldset data-role="controlgroup">
-                            <input type="radio" name="station" id="radio-1-01" value="01">
-                            <label for="radio-1-01">Station #1</label>
-                            <input type="radio" name="station" id="radio-1-03" value="03">
-                            <label for="radio-1-03">Station #3</label>
-                            <input type="radio" name="station" id="radio-1-05" value="05">
-                            <label for="radio-1-05">Station #5</label>
-                            <input type="radio" name="station" id="radio-1-07" value="07">
-                            <label for="radio-1-07">Station #7</label>
-                            <input type="radio" name="station" id="radio-1-09" value="09">
-                            <label for="radio-1-09">Station #9</label>
-                            <input type="radio" name="station" id="radio-1-11" value="11">
-                            <label for="radio-1-11">Station #11</label>
+                            <input type="radio" name="worker1" id="radio-1-01" value="01">
+                            <label for="radio-1-01">Sangeetha</label>
+                            <input type="radio" name="worker1" id="radio-1-03" value="03">
+                            <label for="radio-1-03">Matthew</label>
+                            <input type="radio" name="worker1" id="radio-1-05" value="05">
+                            <label for="radio-1-05">Ann</label>
+                            <input type="radio" name="worker1" id="radio-1-07" value="07">
+                            <label for="radio-1-07">Vincent</label>
+                            <input type="radio" name="worker1" id="radio-1-09" value="09">
+                            <label for="radio-1-09">N/A</label>
                         </fieldset>
             </td>
 
             <td>
                         <fieldset data-role="controlgroup">
-                            <input type="radio" name="station" id="radio-1-02" value="02">
-                            <label for="radio-1-02">Station #2</label>
-                            <input type="radio" name="station" id="radio-1-04" value="04">
-                            <label for="radio-1-04">Station #4</label>
-                            <input type="radio" name="station" id="radio-1-06" value="06">
-                            <label for="radio-1-06">Station #6</label>
-                            <input type="radio" name="station" id="radio-1-08" value="08">
-                            <label for="radio-1-08">Station #8</label>
-                            <input type="radio" name="station" id="radio-1-10" value="10">
-                            <label for="radio-1-10">Station #10</label>
-                            <input type="radio" name="station" id="radio-1-12" value="12">
-                            <label for="radio-1-12">Station #12</label>
+                            <input type="radio" name="worker2" id="radio-1-02" value="02">
+                            <label for="radio-1-02">Sangeetha</label>
+                            <input type="radio" name="worker2" id="radio-1-04" value="04">
+                            <label for="radio-1-04">Matthew</label>
+                            <input type="radio" name="worker2" id="radio-1-06" value="06">
+                            <label for="radio-1-06">Ann</label>
+                            <input type="radio" name="worker2" id="radio-1-08" value="08">
+                            <label for="radio-1-08">Vincent</label>
+                            <input type="radio" name="worker2" id="radio-1-10" value="10">
+                            <label for="radio-1-10">N/A</label>
                         </fieldset>
             </td>
 
