--- a/workersetup.html
+++ b/workersetup.html
@@ -61,7 +61,7 @@
                             <label for="radio-1-05">Ann</label>
                             <input type="radio" name="worker1" id="radio-1-07" value="07">
                             <label for="radio-1-07">Vincent</label>
-                            <input type="radio" name="worker1" id="radio-1-09" value="09">
+                            <input type="radio" name="worker1" id="radio-1-09" value="0">
                             <label for="radio-1-09">N/A</label>
                         </fieldset>
             </td>
@@ -69,14 +69,14 @@
             <td>
                         <fieldset data-role="controlgroup">
                             <input type="radio" name="worker2" id="radio-1-02" value="02">
-                            <label for="radio-1-02">Sangeetha</label>
+                            <label for="radio-1-02">&nbsp;</label>
                             <input type="radio" name="worker2" id="radio-1-04" value="04">
                             <label for="radio-1-04">Matthew</label>
                             <input type="radio" name="worker2" id="radio-1-06" value="06">
                             <label for="radio-1-06">Ann</label>
                             <input type="radio" name="worker2" id="radio-1-08" value="08">
                             <label for="radio-1-08">Vincent</label>
-                            <input type="radio" name="worker2" id="radio-1-10" value="10">
+                            <input type="radio" name="worker2" id="radio-1-10" value="0">
                             <label for="radio-1-10">N/A</label>
                         </fieldset>
             </td>
