Added the accessories details

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 
 		<script type='application/javascript' src='js/fastclick.js'></script>
 		<script type='application/javascript' src='js/index.js'></script>
-
-
-    </head>
+	</head>
     <body >
 
     <div data-role="page" id="lookup" data-theme='b'>
@@ -97,16 +95,17 @@
                     <li data-role="fieldcontain">
                         <label for="processModel">&nbsp;&nbsp;Model</label>
                         <label id="processModel" name="processModel" value="">
+
                     </li>
 
-					<h2>&nbsp;</h2>
-					<h2>&nbsp;</h2>
+					<li>
+						<div id="processAccesory"></div>
+					</li>
 
                     <li>
 							<button type="submit" id="vinlookup" data-inline='false'><i class='lIcon fa fa-check'></i>Complete</button>
                     </li>
                 </ul>
-
 
 		</div>
 
