--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/font-awesome.min.css" />
 
 		<!-- jQueryMobileCSS - original without styling -->
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
+		<link rel="stylesheet" href="css/jquery.mobile-1.4.2.css" />
 
 		<!-- nativeDroid core CSS -->
         <link rel="stylesheet" href="css/jquerymobile.nativedroid.css" />
@@ -43,11 +43,6 @@
         <div data-role="content">
 
                 <ul data-role="listview" data-inset="true">
-					<h2>&nbsp;</h2>
-					<h2>&nbsp;</h2>
-					<h2>&nbsp;</h2>
-					<h2>&nbsp;</h2>
-					<h2>&nbsp;</h2>
 
                     <li data-role="fieldcontain">
                         <label for="lookupVIN">&nbsp;&nbsp;VIN</label>
@@ -115,7 +110,7 @@
 				<ul>
 					<li><a href="index.html"><i class='blIcon fa fa-car'></i>Process Vehicle</a></li>
 					<li><a href="stationsetup.html"><i class='blIcon fa fa-tablet'></i>Station Setup</a></li>
-					<li><a href="usersetup.html"><i class='blIcon fa fa-user'></i>User Setup</a></li>
+					<li><a href="workersetup.html"><i class='blIcon fa fa-user'></i>Worker Setup</a></li>
 				</ul>
 			</div>
 		</div>
