--- a/stationsetup.html
+++ b/stationsetup.html
@@ -53,7 +53,7 @@
             <tr>
             <td>
                         <fieldset data-role="controlgroup">
-                            <input type="radio" name="station" id="radio-1-01" value="01">
+                            <input type="radio" name="station" id="radio-1-01" value="01" checked>
                             <label for="radio-1-01">Station #1</label>
                             <input type="radio" name="station" id="radio-1-03" value="03">
                             <label for="radio-1-03">Station #3</label>
