--- a/workersetup.html
+++ b/workersetup.html
@@ -53,7 +53,7 @@
             <tr>
             <td>
                         <fieldset data-role="controlgroup">
-                            <input type="radio" name="worker1" id="radio-1-01" value="01">
+                            <input type="radio" name="worker1" id="radio-1-01" value="01" checked>
                             <label for="radio-1-01">Sangeetha</label>
                             <input type="radio" name="worker1" id="radio-1-03" value="03">
                             <label for="radio-1-03">Matthew</label>
@@ -69,10 +69,10 @@
             <td>
                         <fieldset data-role="controlgroup">
                             <input type="radio" name="worker2" id="radio-1-02" value="02">
-                            <label for="radio-1-02">&nbsp;</label>
+                            <label for="radio-1-02">Sangeetha</label>
                             <input type="radio" name="worker2" id="radio-1-04" value="04">
                             <label for="radio-1-04">Matthew</label>
-                            <input type="radio" name="worker2" id="radio-1-06" value="06">
+                            <input type="radio" name="worker2" id="radio-1-06" value="06" checked>
                             <label for="radio-1-06">Ann</label>
                             <input type="radio" name="worker2" id="radio-1-08" value="08">
                             <label for="radio-1-08">Vincent</label>
