--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </li>
 
 					<li>
-						<div id="processAccesory"></div>
+						<div id="processAccessory"></div>
 					</li>
 
                     <li>
