Changed layout of accessories

--- a/index.html
+++ b/index.html
@@ -97,6 +97,41 @@
 						<div id="processAccessory"></div>
 					</li>
 
+        <div data-role="content">
+
+          <ul data-role="listview" data-inset="false" data-icon="false" data-divider-theme="b">
+            <li data-role="list-divider">Accessories Required</li>
+                    <div id="requiredacc">
+                    <li data-role="fieldcontain">
+                        <fieldset data-role="controlgroup">
+                            <legend>Accessory 1 <br/> Expected BOM Time - 7mins</legend>
+                            <input type="checkbox" name="checkbox-1a" id="checkbox-1ab">
+                            <label for="checkbox-1ab">Installed</label>
+                        </fieldset>
+                    </li>
+                    <li data-role="fieldcontain">
+                        <fieldset data-role="controlgroup">
+                            <legend>Accessory 1 <br/> Expected BOM Time - 7mins</legend>
+                            <input type="checkbox" name="checkbox-1a" id="checkbox-1ab">
+                            <label for="checkbox-1ab">Installed</label>
+                        </fieldset>
+                    </li>
+
+<li data-role='fieldcontain'><fieldset data-role='controlgroup'><legend>BD - Tundra Oklahoma/Louisiana Badges <br/> Expected BOM Time - 7mins</legend><input type='checkbox' name='checkbox-4' id='checkbox-4'><label for='checkbox-4'>Installed</label></fieldset></li><li data-role='fieldcontain'><fieldset data-role='controlgroup'><legend>BD - Tundra TSS <br/> Expected BOM Time - 2mins</legend><input type='checkbox' name='checkbox-5' id='checkbox-5'><label for='checkbox-5'>Installed</label></fieldset></li><li data-role='fieldcontain'><fieldset data-role='controlgroup'><legend>G8 - Tundra TSS <br/> Expected BOM Time - 9mins</legend><input type='checkbox' name='checkbox-23' id='checkbox-23'><label for='checkbox-23'>Installed</label></fieldset></li><li data-role='fieldcontain'><fieldset data-role='controlgroup'><legend>G9 - Tundra Texas Edition Badges <br/> Expected BOM Time - 8mins</legend><input type='checkbox' name='checkbox-25' id='checkbox-25'><label for='checkbox-25'>Installed</label></fieldset></li><li data-role='fieldcontain'><fieldset data-role='controlgroup'><legend>PB - All Others <br/> Expected BOM Time - 6mins</legend><input type='checkbox' name='checkbox-38' id='checkbox-38'><label for='checkbox-38'>Installed</label></fieldset></li><li data-role='fieldcontain'><fieldset data-role='controlgroup'><legend>PF - Tundra <br/> Expected BOM Time - 48mins</legend><input type='checkbox' name='checkbox-50' id='checkbox-50'><label for='checkbox-50'>Installed</label></fieldset></li>
+
+                    </div>
+            <li data-role="list-divider" class="ui-li-divider2">Accessories Optional</li>
+                    <div id="optionalacc">
+
+
+
+
+                    </div>
+
+        </ul>
+
+        </div>
+
                     <li>
 							<button type="submit" id="vinlookup" data-inline='false'><i class='lIcon fa fa-check'></i>Complete</button>
                     </li>
