--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
 
                     <li data-role="fieldcontain">
                         <label for="processModel">&nbsp;&nbsp;Model</label>
+                        <div>
+						<img style="width: 100px; float: left;" name="processModel" src="img/tundra.png">
                         <label id="processModel" name="processModel" value="">
-
+                        </div>
                     </li>
 
 					<li>
