--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li data-role="fieldcontain">
                         <label for="processModel">&nbsp;&nbsp;Model</label>
                         <div>
-						<img style="width: 100px; float: left;" name="processModel" src="img/tundra.png">
+						<img style="width: 100px; float: left;" name="processModel" id="vehimg" src="">
                         <label id="processModel" name="processModel" value="">
                         </div>
                     </li>
